# english-meeting-helper

./: .dockerignore  .gitignore  AGENTS.md  README.md  deploy.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.kiro/steering/: aws-services.md  backend-guidelines.md  frontend-guidelines.md  performance-requirements.md  product.md  project-overview.md  structure.md  tech.md  testing-strategy.md  websocket-protocol.md
apps/api/: .env.example  README.md  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/api/: __init__.py  translate.py
apps/api/app/core/: __init__.py  config.py  deps.py  logging.py
apps/api/app/domain/: __init__.py
apps/api/app/domain/models/: __init__.py  base.py  events.py  provider.py  session.py  subtitle.py  translate.py
apps/api/app/services/: __init__.py  bedrock.py  correction.py  suggestion.py  summary.py  transcribe.py
apps/api/app/services/stt/: __init__.py  aws.py  openai.py
apps/api/app/services/translation/: __init__.py  aws.py  openai.py
apps/api/app/ws/: __init__.py  meetings.py
apps/api/tests/: test_bedrock_service.py  test_correction_queue.py  test_display_buffer.py  test_integration.py  test_main.py  test_models.py  test_sentence_detector.py  test_session.py  test_suggestion_service.py  test_summary_service.py  test_transcribe_service.py  test_translate_api.py  test_websocket.py
infra/: README.md
infra/cdk/: app.py  cdk.context.json.example  cdk.json  pyproject.toml  requirements.txt
infra/cdk/stacks/: app_stack.py
infra/cdk/tests/: test_app_stack.py
(+48 files in other folders)
