[tool.poetry]
name = "english-meeting-helper-api"
version = "0.1.0"
description = "English Meeting Helper API skeleton"
authors = ["Product Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
websockets = "^12.0"
amazon-transcribe = "^0.6.0"
boto3 = "^1.34.0"
openai = "^1.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
hypothesis = "^6.100.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
